<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TestActivity!</string>
    <string name="user">我</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="error">错误提示!</string>
    <string name="hot">热门</string>
    <string name="live">游记</string>
    <string name="userlive">直播</string>
    <string name="write_live">写直播</string>
    <string name="square">广场</string>
    <string name="inform">通知</string>
    <string name="app_name">机车党</string>
    <string name="desc">desc</string>
    <string name="userlogin">登录</string>
    <string name="sinaquicklogin">新浪登录</string>
    <string name="qqquicklogin">QQ登录</string>
    <string name="bit_register">注&#160;册</string>
    <string name="register">注册</string>
    <string name="exit">退出当前账号</string>
    <string name="username">账&#160;&#160;&#160;&#160;号:</string>
    <string name="register_username">用户名:</string>
    <string name="password">密 &#160;&#160;&#160;码:</string>
    <string name="name_condition">用户名一旦输入不可修改</string>
    <string name="password_condition">6&#8211;14位，字母区分大小写</string>
    <string name="email">邮&#160;&#160;&#160;&#160;箱:</string>
    <string name="password_hint">密码</string>
    <string name="name_or_email">用户名/邮箱</string>
    <string name="email_input">请输入邮箱地址</string>
    <string name="forget_password">忘记密码?</string>
    <string name="ok">创建</string>
    <string name="select_photo">图片选择</string>
    <string name="cancel">取消</string>
    <string name="focus">关注</string>
    <string name="nofocus">取消关注</string>
    <string name="endlive">结束直播</string>
    <string name="updatelive">更新了游记</string>
    <string name="continuelive">续写直播</string>
    <string name="share">分享</string>
    <string name="del">删除</string>
    <string name="comment">评论</string>
    <string name="writelive">记录您的游记......</string>
    <string name="insertlocation">插入位置</string>
    <string name="contact">联系人</string>
    <string name="searchcontact">搜索联系人</string>
    <string name="search">搜索</string>
    <string name="hear">我在这里</string>
    <string name="delete_place">删除位置</string>
    <string name="where">这个地点是哪里呢？</string>
    <string name="hotel">住宿</string>
    <string name="eating">餐饮</string>
    <string name="gasstation">加油站</string>
    <string name="scenery">风景</string>
    <string name="youji">游记</string>
    <string name="discuss">讨论组</string>
    <string name="coffee">咖啡厅</string>
    <string name="yishou">易手</string>
    <string name="guanjia">管家中心</string>
    <string name="jieche">街车</string>
    <string name="paoche1">跑车</string>
    <string name="taban">踏板</string>
    <string name="yueye">越野</string>
    <string name="guochan">国产</string>
    <string name="often">常逛的</string>
    <string name="zhuangbei">装备及周边</string>
    <string name="kuaguo">跨国骑行</string>
    <string name="paoche">跑车护理</string>
	<string name="maiche">买车经验</string>  
	<string name="publish">发表主题</string>
	<string name="theme">标题(必填)</string> 
	<string name="content">内容</string>
	<string name="theme_post">主题贴</string>
	<string name="write_post">发贴</string>
	<string name="onlysee_poster">只看楼主</string>
	<string name="first_post">1楼</string>
	<string name="post">楼</string>
    <string name="post_user">楼主</string>
	<string name="number_post">发贴数</string>
	<string name="mypost">我的贴子</string>
	<string name="in">在</string>
	<string name="publish_post">发贴</string>
	<string name="response">回复</string>
	<string name="touch_me">\&#064;我</string>
	<string name="private_letter">私信</string>
	<string name="write_private">写私信</string>
	<string name="new_friends">新好友</string>
	<string name="Isay">我也说一句\u2026</string>
	<string name="starting">进行中</string>
	<string name="see_day">查看线路日程</string>
	<string name="refresh">正在拼命加载中\u2026</string>
	<string name="refresh_now">正在刷新\u2026</string>
	<string name="refresh_more">加载更多</string>
	<string name="refresh_up_more">上拉加载更多</string>
	<string name="head_refresh_more">松开刷新数据</string>
	<string name="pull_refresh_more">松开加载更多</string>
	<string name="down_refresh">下拉刷新</string>
	<string name="refresh_last_time">上次更新时间：</string>
	<string name="friends">好友</string>
	<string name="myfriends">我的好友</string>
	<string name="collect">收藏</string>
    <string name="mycollect">我的收藏</string>
	<string name="numsetting">账号设置</string>
	<string name="draftbox">草稿箱</string>
    <string name="cleardraftbox">清空</string>
	<string name="edit_ownmassage">编辑资料</string>
	<string name="signin">每日签到</string>
	<string name="now_car">现役车种</string>
	<string name="dynamic">我的动态</string>
	<string name="IamIn">我在</string>
	<string name="xinghao">型号:</string>
	<string name="pailiang">排量:</string>
	<string name="dongtai">我的游记</string>
	<string name="nodongtai">我暂时没有任何游记哟~</string>
	<string name="publishWhat">发表了:</string>
	<string name="edit_massage">编辑资料</string>
	<string name="update_userimg">修改头像</string>
	<string name="clear">清除缓存</string>
	<string name="nickname">昵称</string>
	<string name="save">保存</string>
	<string name="cc">cc</string>
	<string name="inputNickname">输入你的昵称</string>
	<string name="gender">性别</string>
	<string name="manOrWomen">男或女</string>
	<string name="signature">签名</string>
	<string name="introduce">简单介绍下自己</string>
	<string name="update_Lovecar_img">修改爱骑照片</string>
	<string name="models">车型</string>
	<string name="edit_models">填写你的车型</string>
	<string name="displacement">排量</string>
	<string name="edit_displacement">填写你的爱骑排量</string>
	<string name="system_setting">系统设置</string>
	<string name="push_new_massage">推送新消息</string>
	<string name="not_distrub_time">免打扰时间</string>
	<string name="new_massage_remind">新消息提醒</string>
	<string name="browse_setting">浏览设置</string>
	<string name="day_model">日间模式</string>
	<string name="night_model">夜间模式</string>
	<string name="sound">声音</string>
	<string name="shake">震动</string>
	<string name="inform_remind">通知提醒</string>
	<string name="publish_feedback">发表反馈意见</string>
	<string name="input_feedback">输入反馈意见\u2026</string>
	<string name="feedback">意见反馈</string>
	<string name="checkversion">版本检查</string>
	<string name="aboutUs">关于我们</string>
	<string name="travel_response">旅游评论</string>
	<string name="userresponse">评论</string>
	<string name="zero">0</string>
	<string name="no_network_connection_toast">无网络访问</string>
	<string name="result_img_wait">请稍等</string>
	<string name="gl_choose_title">请选择图片</string>
    <string name="register_agree">我已阅读并同意</string>
    <string name="register_policy">使用条款和隐私政策</string>
    <string name="unknownposition">未知位置</string>
    <!-- Account type -->
    <string name="facebook">Facebook</string>
    <string name="flickr">Flickr</string>
    <string name="instagram">Instagram</string>
    <string name="picasa">Picasa</string>
    <string name="take_photos">Take a photo</string>
    <string name="record_video">Record a video</string>
    <string name="last_photo">Last photo taken</string>
    <string name="last_video_captured">Last video captured</string>
    <string name="all_media">All media</string>
    <string name="camera_media">Camera media</string>
    <string name="errortext">网络不给力，点击重新发送</string>

    <!-- Exceptions -->
    <string name="parsing_exception">Invalid response format.</string>
    <string name="http_exception">Check your internet connection and try again.</string>
    <string name="http_error">Server Problem. Please try again later.</string>
    <string name="general_error">An error has occurred. Please try again later.</string>
    <string name="albums">Albums</string>
    <string name="loading_albums">Loading albums...</string>
    <string name="loading_media">Loading media...</string>
    <string name="select_a_photo">Select a Photo</string>
    <string name="select_photos">Select Photos</string>
    <string name="select_a_video">Select a Video</string>
    <string name="select_videos">Select Videos</string>
    <string name="select_media">Select Media</string>
    <string name="select_video_source">Select Video Source</string>
    <string name="select_media_source">Select Media Source</string>
    <string name="select_photo_source">Select Photo Source</string>
    <string name="title_default">Default</string>
    <string name="title_user">User</string>

    <!-- Toast -->
    <string name="toast_choose_photos">Please select photos</string>
    <string name="toast_feature_camera">Your device doesn\'t have a camera</string>
    <string name="no_camera_photos">No photos in camera roll</string>
    <string name="no_albums_found">No albums found</string>
    <string name="no_album_selected">No album selected</string>
    <string name="connect_to_internet_to_cofigure_services">Connect your device to the Internet for configuring the services</string>
    <string name="expired_session_logging_in">Your session has expired. Logging in again...</string>
    <string name="sign_out">Sign out</string>
    <string name="toast_signed_out">Signed out</string>

    <style name="MMTabButton">
		<item name="android:textSize">12.0dip</item>
		<item name="android:gravity">center_horizontal</item>
		<item name="android:button">@null</item>
		<item name="android:textColor">@drawable/maintext_style</item>
		<item name="android:layout_weight">1.0</item>
		<item name="android:paddingBottom">2.0dip</item>
		<item name="android:paddingTop">2.0dip</item>
		 <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">fill_parent</item>
		<item name="android:ellipsize">marquee</item>
		<item name="android:singleLine">true</item>
	</style>

</resources>