<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#E7E7E7"
    >

    <RelativeLayout
        android:id="@+id/live_titlebg"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip" >
        
    <include 
        layout="@layout/title"
        />
	<include 
        android:id="@+id/user_system_setting_return"
        layout="@layout/back"
        />
    <TextView
        android:id="@+id/user_edit_title"      
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:layout_centerInParent="true"
        android:text="@string/system_setting"
        />
	</RelativeLayout>
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:scrollbars="none"
	    >
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        >
	        <TextView     
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#747675"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="10dp"
		        android:textSize="22sp"
		        android:text="@string/numsetting"
		        />
	        <RelativeLayout
			    android:id="@+id/user_own_setting_message"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:clickable="true"
			    android:layout_marginTop="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginLeft="10dp"
			    android:background="@drawable/user_itemtop_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:layout_alignParentLeft="true"
			        android:textSize="18sp"
			        android:text="@string/edit_massage"
			        />
			    <ImageView 
			        android:contentDescription="@string/desc"
			        android:layout_width="16dp"
			        android:layout_height="22dp"
			        android:background="@drawable/more"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:layout_marginRight="10dp"
			        />
			</RelativeLayout>
			<RelativeLayout
			    android:id="@+id/user_system_draftbox"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:clickable="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/user_itembottom_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:layout_alignParentLeft="true"
			        android:textSize="18sp"
			        android:text="@string/draftbox"
			        />
			    <ImageView 
			        android:contentDescription="@string/desc"
			        android:layout_width="16dp"
			        android:layout_height="22dp"
			        android:background="@drawable/more"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:layout_marginRight="10dp"
			        />
			</RelativeLayout>
	        <TextView     
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#747675"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="10dp"
		        android:textSize="22sp"
		        android:text="@string/push_new_massage"
		        />
	        <RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="55dp"
			    android:clickable="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/user_item_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:textSize="18sp"
			        android:layout_alignParentLeft="true"
			        android:text="@string/not_distrub_time"
			        />
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginRight="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#49839B"
			        android:textSize="18sp"
			        android:layout_alignParentRight="true"
			        android:text="每日21:00-次日7:00"
			        />
			</RelativeLayout>
			<TextView     
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#747675"
		        android:layout_marginLeft="10dp"
		        android:textSize="22sp"
		        android:text="@string/new_massage_remind"
		        />
			<RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="55dp"
			    android:clickable="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/user_item_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:textSize="18sp"
			        android:layout_alignParentLeft="true"
			        android:text="@string/sound"
			        />
			    <com.moto.switchbutton.SwitchButton 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/sound_swicthbutton"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:layout_marginRight="10dp"
			        />
			</RelativeLayout>
			<TextView     
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#747675"
		        android:layout_marginLeft="10dp"
		        android:textSize="22sp"
		        android:text="@string/inform_remind"
		        />
			<RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="55dp"
			    android:clickable="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/user_itemtop_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:textSize="18sp"
			        android:layout_alignParentLeft="true"
			        android:text="@string/response"
			        />
			    <com.moto.switchbutton.SwitchButton 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/response_swicthbutton"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:layout_marginRight="10dp"
			        />
			</RelativeLayout>
			<RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="55dp"
			    android:clickable="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/user_itemmiddle_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:textSize="18sp"
			        android:layout_alignParentLeft="true"
			        android:text="@string/touch_me"
			        />
			    <com.moto.switchbutton.SwitchButton 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/touch_me_swicthbutton"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:layout_marginRight="10dp"
			        />
			</RelativeLayout>
			<RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="55dp"
			    android:clickable="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/user_itemmiddle_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:textSize="18sp"
			        android:layout_alignParentLeft="true"
			        android:text="@string/private_letter"
			        />
			    <com.moto.switchbutton.SwitchButton 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/private_letter_swicthbutton"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:layout_marginRight="10dp"
			        />
			</RelativeLayout>
			<RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="55dp"
			    android:clickable="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/user_itembottom_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:textSize="18sp"
			        android:layout_alignParentLeft="true"
			        android:text="@string/new_friends"
			        />
			    <com.moto.switchbutton.SwitchButton 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/new_friends_swicthbutton"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:layout_marginRight="10dp"
			        />
			</RelativeLayout>
			<RelativeLayout
			    android:id="@+id/user_feedback_setting"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:clickable="true"
			    android:layout_marginTop="10dp"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/user_itemtop_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:textSize="18sp"
			        android:text="@string/feedback"
			        />
			    <ImageView 
			        android:contentDescription="@string/desc"
			        android:layout_width="16dp"
			        android:layout_height="22dp"
			        android:background="@drawable/more"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:layout_marginRight="10dp"
			        />
			</RelativeLayout>
			<RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:clickable="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginBottom="10dp"
			    android:background="@drawable/user_itembottom_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:textSize="18sp"
			        android:text="@string/aboutUs"
			        />
			    <ImageView 
			        android:contentDescription="@string/desc"
			        android:layout_width="16dp"
			        android:layout_height="22dp"
			        android:background="@drawable/more"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:layout_marginRight="10dp"
			        />
			</RelativeLayout>
			<RelativeLayout 
			    android:id="@+id/user_system_setting_checkversion"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:clickable="true"
			    android:layout_marginTop="10dp"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/user_itemtop_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerInParent="true"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:textSize="18sp"
			        android:text="@string/checkversion"
			        />
			</RelativeLayout>
			<RelativeLayout 
			    android:id="@+id/user_system_setting_clear"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:clickable="true"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/user_itembottom_press"
			    >
			    <TextView      
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:layout_centerInParent="true"
			        android:layout_centerVertical="true"
			        android:textColor="#747675"
			        android:textSize="18sp"
			        android:text="@string/clear"
			        />
			</RelativeLayout>
			<Button 
			    android:id="@+id/user_setting_exit"
			    android:layout_width="fill_parent"
			    android:layout_height="40dp"
			    android:layout_margin="10dp"
			    android:background="@drawable/login_btn"
			    android:text="@string/exit"
			    android:textSize="23sp"
			    android:gravity="center"
			    android:textColor="#ffffff"
			    />
	    </LinearLayout>
	</ScrollView>
</LinearLayout>