<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E7E7E7"
    android:orientation="vertical" >
	<RelativeLayout
        android:id="@+id/live_titlebg"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip" >
        
    <include 
        layout="@layout/title"
        />
	<include 
        android:id="@+id/user_setting_feedback_return"
        layout="@layout/back"
        />
    <TextView     
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:layout_centerInParent="true"
        android:text="@string/publish_feedback"
        />
    <ImageView 
        android:id="@+id/user_setting_feedback_send"
        android:contentDescription="@string/desc"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:background="@drawable/send"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dp"
        />
	</RelativeLayout>
	<EditText
	    android:layout_marginTop="4dp" 
        android:id="@+id/user_setting_feedback_massage"
        android:gravity="top"
        android:textSize="20sp"
        android:paddingLeft="4dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@null"
        android:hint="@string/input_feedback"
        />
</LinearLayout>