<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E9E9E9"
    android:orientation="vertical" > 

    <RelativeLayout
        android:id="@+id/places_titlebg"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip" >
        
    <include 
        layout="@layout/title"
        />
    
    <include 
        android:id="@+id/return_places"
        layout="@layout/back"
        />

    <TextView
        android:id="@+id/places_title"      
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:layout_centerInParent="true"
        android:text="@string/hear"
        />
    <TextView 
        android:id="@+id/delete_places"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#dc3232"
        android:textSize="15sp"
        android:text="@string/delete_place"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dp"
        android:visibility="gone"
        />
	</RelativeLayout>
    <com.moto.listview.CustomScrollView 
        android:id="@+id/myscrollview_refresh"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
            >
            <LinearLayout
				android:layout_marginTop="10dp" 
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:background="#ffffff"
				android:layout_width="fill_parent"
				android:layout_height="120dp"
				android:orientation="vertical"
				>
		    <LinearLayout
				android:layout_marginTop="14dp"
				android:layout_marginLeft="10dp" 
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_marginRight="10dp"
				android:orientation="horizontal"
				>
				<TextView 
				   	android:layout_width="0dip"
				    android:layout_height="1.0dip"
				    android:layout_weight="1"
				    android:layout_gravity="center_vertical"
				    android:background="#ECECEC"
				    />
				<TextView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:gravity="center"
				    android:text="@string/where"
				    android:textSize="15sp"
				   	android:textColor="#A7A7A7"
				   	/>
				<TextView 
				    android:layout_width="0dip"
				    android:layout_height="1.0dip"
				    android:layout_weight="1"
				    android:layout_gravity="center_vertical"
				    android:background="#ECECEC"
				    />
			</LinearLayout>
				        
			<LinearLayout 
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
			 	android:layout_marginTop="10dp"
				android:orientation="horizontal"
				>
				<CheckBox
					android:id="@+id/hotel"
				    style="@style/checkbox"
				    android:layout_width="0dip"
				    android:layout_weight="1"
				    android:layout_height="60dp"  
				    android:drawableTop="@drawable/checkbox_0"
				    android:text="@string/hotel" />
				<CheckBox
				    android:id="@+id/eating"
				    style="@style/checkbox"
				    android:layout_width="0dip"
				    android:layout_weight="1"
				    android:layout_height="60dp"  
				    android:drawableTop="@drawable/checkbox_1"
				    android:text="@string/eating" />
				<CheckBox
				    android:id="@+id/gasstation"
				    style="@style/checkbox"
				    android:layout_width="0dip"
				    android:layout_weight="1"
				    android:layout_height="60dp"  
				    android:drawableTop="@drawable/checkbox_2"
				    android:text="@string/gasstation" />
				<CheckBox
				    android:id="@+id/scenery"
				    style="@style/checkbox"
				    android:layout_width="0dip"
				    android:layout_weight="1"
				    android:layout_height="60dp"   
				    android:drawableTop="@drawable/checkbox_3"
				    android:text="@string/scenery" />
			</LinearLayout>
			</LinearLayout>      
			<TextView
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp" 
				android:layout_width="fill_parent"
				android:layout_height="3.0dip"
				android:background="#AFAFAF"
				/>
			<RelativeLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="150dp"
	            android:layout_marginTop="10dp"
	            android:layout_marginLeft="5dp"
	            android:background="@drawable/user_item_press"
	            android:layout_marginRight="5dp"
	            >
	            <com.amap.api.maps2d.MapView 
        			android:contentDescription="@string/desc"
        			android:layout_width="fill_parent"
        			android:layout_margin="4dp"
        			android:layout_height="fill_parent"
        			android:id="@+id/place_map"
        			/>
	        </RelativeLayout>	    
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="1.0dip"
				android:layout_marginTop="10dp"
				android:background="#AFAFAF"
				/>
			<RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    >
				<ProgressBar
			        android:id="@+id/place_loading_progressBar"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_centerInParent="true"
			        android:indeterminateDrawable="@drawable/progressbar_loading" />
			    <com.moto.listview.NoScrollListview
					android:id="@+id/places_list"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:cacheColorHint="#00000000"
					android:clickable="true"
					android:divider="#cacbd1"
					android:dividerHeight="0.5px"
					android:fadingEdge="none"
					android:footerDividersEnabled="true" />
			</RelativeLayout>
		</LinearLayout>
    </com.moto.listview.CustomScrollView>
</LinearLayout>